test/libsolidity/syntaxTests/double_stateVariable_declaration.sol
contract test {
	uint256 variable;
	uint128 variable;
}
// ----
// DeclarationError: (36-52): Identifier already declared.
